wording and colors

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Architecture Example</title>
+<title>Example Application with Chaplin</title>
 <link rel="stylesheet" href="css/main.css">
 <!--[if lt IE 9]>
 <script>
@@ -15,9 +15,11 @@ document.documentElement.className += 'js';
 </head>
 <body>
 
-<h1>Architecture Example</h1>
+<h1>Example Application with Chaplin</h1>
 
-<p id="startup-loading">Loading App…</p>
+<p>This example uses a client-side Facebook login to display your Facebook likes.</p>
+
+<p id="startup-loading">Loading…</p>
 
 <div id="page-container">
   <nav id="navigation-container"></nav>
