Changed example application site title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Example Application with Chaplin</title>
+<title>Chaplin Example Application</title>
 <link rel="stylesheet" href="css/main.css">
 <!--[if lt IE 9]>
 <script>
@@ -15,7 +15,7 @@ document.documentElement.className += 'js';
 </head>
 <body>
 
-<h1>Example Application with Chaplin</h1>
+<h1>Chaplin Example Application</h1>
 
 <p>This example uses a client-side Facebook login to display your Facebook likes.</p>
 
