“Loading” info text is .accessible-fallback

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ document.documentElement.className += 'js';
 
 <p>This example uses a client-side Facebook login to display your Facebook likes.</p>
 
-<p id="startup-loading">Loading…</p>
+<p id="startup-loading" class="accessible-fallback">Loading…</p>
 
 <div id="page-container">
   <nav id="navigation-container"></nav>
