--- a/test/index.html
+++ b/test/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 
-<script src="../js/vendor/jquery-1.7.1.js"></script>
+<div id="fb-root"></div>
+
+<script src="../js/vendor/jquery-1.7.2.js"></script>
 <script src="../js/vendor/underscore-1.3.1.js"></script>
-<script src="../js/vendor/backbone-0.9.1.js"></script>
+<script src="../js/vendor/backbone-0.9.2.js"></script>
 <script src="../js/vendor/handlebars-1.0.0.beta.6.js"></script>
 <script src="lib/jasmine-1.1.0/jasmine.js"></script>
 <script src="lib/jasmine-1.1.0/jasmine-html.js"></script>
@@ -16,11 +18,10 @@
 <script>
 (function () {
 
-  var jasmineEnv = jasmine.getEnv();
-  jasmineEnv.updateInterval = 1000;
-  var trivialReporter = new jasmine.TrivialReporter();
-  jasmineEnv.addReporter(trivialReporter);
-  jasmineEnv.specFilter = trivialReporter.specFilter.bind(trivialReporter);
+  var reporter = new jasmine.TrivialReporter();
+  //jasmineEnv.specFilter = trivialReporter.specFilter.bind(trivialReporter);
+  var jasmineEnv = new jasmine.getEnv();
+  jasmineEnv.addReporter(reporter);
 
   require.config({
       baseUrl: '/js',
@@ -33,12 +34,9 @@
 
   require([
     '../test/spec/mediator_spec'
-  ], function () {
-    jasmineEnv.execute();
-  });
-
-  require([
-    '../test/spec/application_spec'
+    , '../test/spec/router_spec'
+    , '../test/spec/application_spec'
+    , '../test/spec/application_controller_spec'
   ], function () {
     jasmineEnv.execute();
   });
