Fix loading of modules i.e. fix switching from /likes/1234 to /posts

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ that they create global objects (jQuery, $, _, Backbone, Handlebars etc.).
 <script src="js/vendor/require-1.0.7.js"></script>
 <script>
 require.config({
-    baseUrl: 'js/',
+    baseUrl: '/js/',
     paths: {
       text: 'vendor/require-text-1.0.7'
     },
