--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ document.documentElement.className += 'js';
 
 <!--
 This is a simple solution. We use the non-AMD versions of the core libraries
-because nearly every module uses these libraries. For this demo, it's okay
-that they create global objects (jQuery, $, _, Backbone, Handlebars etc.).
+because nearly every module uses these libraries. In the end you might want
+to package all libraries in AMD modules.
 -->
 <script src="js/vendor/jquery-1.7.2.js"></script>
 <script src="js/vendor/underscore-1.3.1.js"></script>
@@ -49,9 +49,11 @@ require.config({
     // For easier development, disable browser caching
     // Of course, this should be removed in a production environment
     urlArgs: 'bust=' +  (new Date()).getTime()
-});
-require(['application'], function (Application) {
-  Application.initialize();
+})
+// Bootstrap the application
+require(['example_application'], function (ExampleApplication) {
+  var app = new ExampleApplication();
+  app.initialize();
 });
 </script>
 
