--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ require.config({
       jquery: 'vendor/jquery-1.7.2',
       underscore: 'vendor/underscore-1.3.2',
       backbone: 'vendor/backbone-0.9.2',
-      handlebars: 'vendor/handlebars-1.0.0.beta6',
+      handlebars: 'vendor/handlebars-1.0.0.beta.6',
       text: 'vendor/require-text-1.0.7'
     },
     waitSeconds: 1,
