--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Test Runner</title>
+<title>Chaplin Test Runner</title>
 <link rel="stylesheet" type="text/css" href="lib/jasmine-1.1.0/jasmine.css">
 </head>
 <body>
@@ -9,30 +9,31 @@
 <div id="jasmine-root"></div>
 <div id="fb-root"></div>
 
-<script src="../js/vendor/jquery-1.7.2.js"></script>
-<script src="../js/vendor/underscore-1.3.1.js"></script>
-<script src="../js/vendor/backbone-0.9.2.js"></script>
-<script src="../js/vendor/handlebars-1.0.0.beta.6.js"></script>
 <script src="lib/jasmine-1.1.0/jasmine.js"></script>
 <script src="lib/jasmine-1.1.0/jasmine-html.js"></script>
 <script src="../js/vendor/require-1.0.7.js"></script>
 <script>
 (function () {
 
+  require.config({
+      baseUrl: '/js/',
+      paths: {
+        jquery: 'vendor/jquery-1.7.2',
+        underscore: 'vendor/underscore-1.3.2',
+        backbone: 'vendor/backbone-0.9.2',
+        handlebars: 'vendor/handlebars-1.0.0.beta.6',
+        text: 'vendor/require-text-1.0.7'
+      },
+      waitSeconds: 1,
+      // For easier development, disable browser caching
+      // Of course, this should be removed in a production environment
+      urlArgs: 'bust=' +  (new Date()).getTime()
+  })
+
   var reporter = new jasmine.TrivialReporter(document.getElementById('jasmine-root'));
   //jasmineEnv.specFilter = trivialReporter.specFilter.bind(trivialReporter);
   var jasmineEnv = new jasmine.getEnv();
   jasmineEnv.addReporter(reporter);
-
-  require.config({
-      baseUrl: '/js',
-      paths: {
-        text: 'vendor/require-text-1.0.7'
-        //, order: 'vendor/require-order-1.0.5'
-      },
-      waitSeconds: 1,
-      urlArgs: 'bust=' +  (new Date()).getTime()
-  });
 
   require([
     '../test/spec/js/mediator_spec'
