Spec improvements, began CollectionView spec

--- a/test/index.html
+++ b/test/index.html
@@ -41,6 +41,7 @@
     , '../test/spec/js/application_spec'
     , '../test/spec/js/application_controller_spec'
     , '../test/spec/js/application_view_spec'
+    , '../test/spec/js/collection_view_spec'
   ], function () {
     jasmineEnv.execute();
   });
