--- a/test/index.html
+++ b/test/index.html
@@ -11,18 +11,18 @@
 
 <script src="lib/jasmine-1.1.0/jasmine.js"></script>
 <script src="lib/jasmine-1.1.0/jasmine-html.js"></script>
-<script src="../js/vendor/require-1.0.8.js"></script>
+<script src="lib/require-1.0.8.js"></script>
 <script>
 (function () {
 
   require.config({
       baseUrl: '/js/',
       paths: {
-        jquery: 'vendor/jquery-1.7.2',
-        underscore: 'vendor/underscore-1.3.2',
-        backbone: 'vendor/backbone-0.9.2',
-        handlebars: 'vendor/handlebars-1.0.0.beta.6',
-        text: 'vendor/require-text-1.0.8'
+        jquery: '../test/lib/jquery-1.7.2',
+        underscore: '../test/lib/underscore-1.3.2',
+        backbone: '../test/lib/backbone-0.9.2',
+        handlebars: '../test/lib/handlebars-1.0.0.beta.6',
+        text: '../test/lib/require-text-1.0.8'
       },
       waitSeconds: 1,
       // For easier development, disable browser caching
@@ -39,9 +39,13 @@
     '../test/spec/js/mediator_spec'
     , '../test/spec/js/router_spec'
     , '../test/spec/js/application_spec'
-    , '../test/spec/js/application_controller_spec'
-    , '../test/spec/js/application_view_spec'
+    , '../test/spec/js/dispatcher_spec'
+    , '../test/spec/js/layout_spec'
     , '../test/spec/js/collection_view_spec'
+    , '../test/spec/js/model_spec'
+    , '../test/spec/js/collection_spec'
+    , '../test/spec/js/controller_spec'
+    , '../test/spec/js/view_spec'
   ], function () {
     jasmineEnv.execute();
   });
