--- a/test/index.html
+++ b/test/index.html
@@ -7,46 +7,44 @@
 <body>
 
 <div id="jasmine-root"></div>
-<div id="fb-root"></div>
 
 <script src="lib/jasmine-1.1.0/jasmine.js"></script>
 <script src="lib/jasmine-1.1.0/jasmine-html.js"></script>
 <script src="lib/require-1.0.8.js"></script>
 <script>
 (function () {
-
   require.config({
-      baseUrl: '/js/',
+      baseUrl: 'js/',
       paths: {
-        jquery: '../test/lib/jquery-1.7.2',
-        underscore: '../test/lib/underscore-1.3.2',
-        backbone: '../test/lib/backbone-0.9.2',
-        handlebars: '../test/lib/handlebars-1.0.0.beta.6',
-        text: '../test/lib/require-text-1.0.8'
+        jquery: '../lib/jquery-1.7.2'
+        , underscore: '../lib/underscore-1.3.2'
+        , backbone: '../lib/backbone-0.9.2'
       },
       waitSeconds: 1,
       // For easier development, disable browser caching
-      // Of course, this should be removed in a production environment
       urlArgs: 'bust=' +  (new Date()).getTime()
   })
 
   var reporter = new jasmine.TrivialReporter(document.getElementById('jasmine-root'));
-  //jasmineEnv.specFilter = trivialReporter.specFilter.bind(trivialReporter);
   var jasmineEnv = new jasmine.getEnv();
   jasmineEnv.addReporter(reporter);
+  jasmineEnv.specFilter = reporter.specFilter.bind(reporter);
 
-  require([
-    '../test/spec/js/mediator_spec'
-    , '../test/spec/js/router_spec'
-    , '../test/spec/js/application_spec'
-    , '../test/spec/js/dispatcher_spec'
-    , '../test/spec/js/layout_spec'
-    , '../test/spec/js/collection_view_spec'
-    , '../test/spec/js/model_spec'
-    , '../test/spec/js/collection_spec'
-    , '../test/spec/js/controller_spec'
-    , '../test/spec/js/view_spec'
-  ], function () {
+  var specs = [
+    'mediator'
+    , 'router'
+    , 'application'
+    , 'layout'
+    , 'collection_view'
+    , 'model'
+    , 'collection'
+    , 'controller'
+    , 'view'
+  ];
+  for (var i = 0, l = specs.length; i < l; i++) {
+    specs[i] = specs[i] + '_spec';
+  }
+  require(specs, function () {
     jasmineEnv.execute();
   });
 
