--- a/test/index.html
+++ b/test/index.html
@@ -20,7 +20,8 @@
     paths: {
       jquery: '../lib/jquery-1.7.2',
       underscore: '../lib/underscore-1.3.3',
-      backbone: '../lib/backbone-0.9.2'
+      backbone: '../lib/backbone-0.9.2',
+      chaplin: '../lib/chaplin'
     },
     shim: {
       backbone: {
