--- a/test/index.html
+++ b/test/index.html
@@ -1,69 +1,65 @@
-<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Chaplin Test Runner</title>
-<link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css">
-</head>
-<body>
-
-<div id="testbed"></div>
-<div id="jasmine-root"></div>
-
-<script src="lib/jasmine-1.2.0/jasmine.js"></script>
-<script src="lib/jasmine-1.2.0/jasmine-html.js"></script>
-<script src="lib/require-2.0.4.js"></script>
-<script>
-(function () {
-  requirejs.config({
-    baseUrl: 'js/',
-    paths: {
-      jquery: '../lib/jquery-1.7.2',
-      underscore: '../lib/underscore-1.3.3',
-      backbone: '../lib/backbone-0.9.2'
-    },
-    shim: {
-      backbone: {
-        deps: ['underscore', 'jquery'],
-        exports: 'Backbone'
-      },
-      underscore: {
-        exports: '_'
-      }
-    },
-    // For easier development, disable browser caching
-    urlArgs: 'bust=' +  (new Date()).getTime()
-  });
-
-  var jasmineEnv = new jasmine.getEnv();
-
-  var reporter = new jasmine.HtmlReporter();
-  jasmineEnv.addReporter(reporter);
-  jasmineEnv.specFilter = function(spec) {
-    return reporter.specFilter(spec);
-  };
-
-  var specs = [
-    'mediator',
-    'router',
-    'application',
-    'layout',
-    'dispatcher',
-    'collection_view',
-    'model',
-    'collection',
-    'controller',
-    'view'
-  ];
-  for (var i = 0, l = specs.length; i < l; i++) {
-    specs[i] = specs[i] + '_spec';
-  }
-  require(specs, function () {
-    jasmineEnv.execute();
-  });
-
-})();
-</script>
-
-</body>
+  <head>
+    <title>Chaplin test runner</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" href="lib/mocha-1.3.0.css" />
+    <script src="lib/mocha-1.3.0.js"></script>
+    <script src="lib/chai-1.1.1.js"></script>
+    <script src="lib/sinon-1.4.2.js"></script>
+    <script src="lib/sinon-chai-2.1.2.js"></script>
+    <script src="lib/require-2.0.4.js"></script>
+    <script>
+      (function () {
+        requirejs.config({
+          baseUrl: 'js/',
+          paths: {
+            jquery: '../lib/jquery-1.7.2',
+            underscore: '../lib/underscore-1.3.3',
+            backbone: '../lib/backbone-0.9.2'
+          },
+          shim: {
+            backbone: {
+              deps: ['underscore', 'jquery'],
+              exports: 'Backbone'
+            },
+            underscore: {
+              exports: '_'
+            }
+          },
+          // For easier development, disable browser caching
+          urlArgs: 'bust=' +  (new Date()).getTime()
+        });
+      })();
+      mocha.setup('bdd');
+    </script>
+    <script>
+      window.onload = function() {
+        window.expect = chai.expect;
+        var specs = [
+          'mediator',
+          'router',
+          'application',
+          'layout',
+          'dispatcher',
+          'collection_view',
+          'model',
+          'collection',
+          'controller',
+          'view'
+        ];
+        var loaded = [];
+        for (var i = 0, l = specs.length; i < l; i++) {
+          loaded.push(specs[i] + '_spec');
+        }
+        require(loaded, function () {
+          var runner = mocha.run();
+          runner.globals(['foo', 'bar', 'baz']);
+        });
+      };
+    </script>
+  </head>
+  <body>
+    <div id="mocha"></div>
+    <div id="testbed"></div>
+  </body>
 </html>
