Fix dispatcher specs by restoring proto vals.

--- a/test/index.html
+++ b/test/index.html
@@ -53,7 +53,7 @@
         }
         require(loaded, function () {
           var runner = mocha.run();
-          runner.globals(['foo', 'bar', 'baz']);
+          runner.globals(['jQuery*']);
         });
       };
     </script>
