--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Chaplin test runner</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="lib/mocha-1.3.0.css" />
     <script src="lib/mocha-1.3.0.js"></script>
     <script src="lib/expect-0.1.2.js"></script>
