--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Chaplin test runner</title>
+    <title>Chaplin Test Runner</title>
     <link rel="stylesheet" href="lib/mocha-1.3.0.css" />
     <script src="lib/mocha-1.3.0.js"></script>
     <script src="lib/expect-0.1.2.js"></script>
@@ -31,7 +31,7 @@
           urlArgs: 'bust=' +  (new Date()).getTime()
         });
       })();
-      mocha.setup('bdd');
+      mocha.setup({ ui: 'bdd', ignoreLeaks: true });
     </script>
     <script>
       window.expect = SinonExpect.enhance(expect, sinon, 'was');
