Added the Delayer with tests, do not integrate it (see issue #158)

--- a/test/index.html
+++ b/test/index.html
@@ -46,7 +46,8 @@
           'model',
           'collection',
           'controller',
-          'view'
+          'view',
+          'delayer'
         ];
         var loaded = [];
         for (var i = 0, l = specs.length; i < l; i++) {
