Add EventBroker spec

--- a/test/index.html
+++ b/test/index.html
@@ -37,6 +37,7 @@
       window.expect = SinonExpect.enhance(expect, sinon, 'was');
       window.onload = function() {
         var specs = [
+          'event_broker',
           'mediator',
           'router',
           'application',
