Test suite extended to cover most; a few bugs found and fixed.

--- a/test/index.html
+++ b/test/index.html
@@ -44,7 +44,8 @@
           'collection',
           'controller',
           'view',
-          'delayer'
+          'delayer',
+          'composer'
         ];
         var loaded = [];
         for (var i = 0, l = specs.length; i < l; i++) {
