--- a/test/index.html
+++ b/test/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <title>Chaplin Test Runner</title>
-    <link rel="stylesheet" href="lib/mocha-1.7.4.css">
-    <script src="lib/mocha-1.7.4.js"></script>
-    <script src="lib/expect-0.2.0.js"></script>
-    <script src="lib/sinon-1.5.0.js"></script>
-    <script src="lib/sinon-expect-0.2.0.js"></script>
-    <script src="lib/require-2.1.1.js"></script>
+    <link rel="stylesheet" href="vendor/mocha-1.7.4.css">
+    <script src="vendor/mocha-1.7.4.js"></script>
+    <script src="vendor/expect-0.2.0.js"></script>
+    <script src="vendor/sinon-1.5.0.js"></script>
+    <script src="vendor/sinon-expect-0.2.0.js"></script>
+    <script src="vendor/require-2.1.1.js"></script>
     <script>
       requirejs.config({
         baseUrl: 'js/',
         paths: {
-          jquery: '../lib/jquery-1.8.3',
-          underscore: '../lib/underscore-1.4.2',
-          backbone: '../lib/backbone-0.9.2'
+          jquery: '../vendor/jquery-1.8.3',
+          underscore: '../vendor/underscore-1.4.2',
+          backbone: '../vendor/backbone-0.9.2'
         },
         shim: {
           backbone: {
