Add utils spec.

--- a/test/index.html
+++ b/test/index.html
@@ -52,7 +52,8 @@
           'collection',
           'controller',
           'view',
-          'delayer'
+          'delayer',
+          'utils'
         ];
         var loaded = [];
         for (var i = 0, l = specs.length; i < l; i++) {
