Added test runner plus code coverage to the gruntfile.

--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
       window.clearInterval = timers.clearInterval;
 
       requirejs.config({
-        baseUrl: 'js/',
+        baseUrl: 'temp/',
         paths: {
           jquery: '../components/jquery/jquery',
           underscore: '../components/underscore/underscore',
