--- a/test/index.html
+++ b/test/index.html
@@ -38,6 +38,16 @@
         urlArgs: 'bust=' + (new Date()).getTime()
       });
       mocha.setup({ui: 'bdd', ignoreLeaks: true});
+      // Wonderful hack to send a message to grunt from inside a mocha test.
+      function sendMessage() {
+        var args = [].slice.call(arguments);
+        alert(JSON.stringify(args));
+      }
+      mocha.suite.afterAll(function() {
+        // Send message to grunt with the coverage information on
+        // test completion.
+        sendMessage('mocha.coverage', window.__coverage__);
+      });
       window.expect = SinonExpect.enhance(expect, sinon, 'was');
       window.onload = function() {
         var specs = [
