Add region tests and documentation.

--- a/test/index.html
+++ b/test/index.html
@@ -59,6 +59,7 @@
           'application',
           'layout',
           'dispatcher',
+          'composer',
           'collection_view',
           'model',
           'collection',
