Add sync machine specs.

--- a/test/index.html
+++ b/test/index.html
@@ -61,7 +61,8 @@
           'controller',
           'view',
           'delayer',
-          'utils'
+          'utils',
+          'sync_machine'
         ];
         var loaded = [];
         for (var i = 0, l = specs.length; i < l; i++) {
