Initial implementation of XHR request strategizing.

--- a/test/index.html
+++ b/test/index.html
@@ -62,7 +62,8 @@
           'view',
           'delayer',
           'utils',
-          'sync_machine'
+          'sync_machine',
+          'strategist'
         ];
         var loaded = [];
         for (var i = 0, l = specs.length; i < l; i++) {
