--- a/test/index.html
+++ b/test/index.html
@@ -56,6 +56,7 @@
           'layout',
           'dispatcher',
           'composer',
+          'composition',
           'collection_view',
           'model',
           'collection',
