`reverse` helper for easy access to router lookups

--- a/test/index.html
+++ b/test/index.html
@@ -64,6 +64,7 @@
           'view',
           'delayer',
           'utils',
+          'helpers',
           'sync_machine'
         ];
         var loaded = [];
