Add reverse bench.

--- a/test/bench.html
+++ b/test/bench.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Chaplin Test Runner</title>
+    <script src="components/benchmark/benchmark.js"></script>
     <script src="components/requirejs/require.js"></script>
     <script>
       requirejs.config({
@@ -25,61 +26,71 @@
         urlArgs: 'bust=' + (new Date()).getTime()
       });
 
-      var stats = {};
-      var getAverage = function(list) {
-        return list.reduce(function(a, b) {
-          return a + b;
-        }, 0) / list.length;
-      };
-
-      require(['chaplin/models/collection', 'chaplin/views/collection_view', 'chaplin/views/view'], function(Collection, CollectionView, View) {
-        var bench = function(count) {
-          var models = _.range(65, count + 65).map(function(code) {
-            return {
-              id: String.fromCharCode(code),
-              title: String(Math.random())
-            };
+      require(['chaplin'], function(Chaplin) {
+        var log = function() {
+          this.forEach(function(item) {
+            console.log(item.name, Math.round(item.hz));
           });
-
-          var ItemView = View.extend({
-            tagName: 'li',
-            attributes: function() {
-              return {id: this.model.id, cid: this.model.cid};
-            },
-            templateFunction: function(data) {
-              return data.title;
-            },
-            getTemplateFunction: function() {
-              return this.templateFunction;
-            }
-          });
-
-          var CV = CollectionView.extend({itemView: ItemView});
-          var collection = new Collection();
-          var view = new CV({collection: collection});
-          var start = performance.now();
-          collection.reset(models);
-          var total = performance.now() - start;
-          if (stats[count] == null) stats[count] = [];
-          stats[count].push(total);
         };
 
-        var benchAll = function() {
-          bench(10);
-          bench(50);
-          bench(100);
-          bench(200);
-          bench(400);
+        var bench = function(cases) {
+          var suite = new Benchmark.Suite;
+          Object.keys(cases).forEach(function(name) {
+            var fn = cases[name];
+            suite.add(name, fn);
+          });
+          suite
+            .on('error', function(e) {
+              console.error('Error!', e);
+            })
+            .on('complete', log)
+            .run({async: true});
         };
 
-        for (var i = 0; i < 5; i++) {
-          benchAll();
-        }
-        Object.keys(stats).forEach(function(size) {
-          var res = stats[size];
-          var avg = getAverage(res).toFixed(2);
-          var html = '<div><strong>' + size + ' elements:</strong> ' + avg + 'ms</div>';
-          $('body').append(html);
+        // (new Benchmark.Suite)
+        //   .add('default', function() {
+        //     var models = _.range(65, 465).map(function(code) {
+        //       return {
+        //         id: String.fromCharCode(code),
+        //         title: String(Math.random())
+        //       };
+        //     });
+
+        //     var ItemView = Chaplin.View.extend({
+        //       tagName: 'li',
+        //       attributes: function() {
+        //         return {id: this.model.id, cid: this.model.cid};
+        //       },
+        //       templateFunction: function(data) {
+        //         return data.title;
+        //       },
+        //       getTemplateFunction: function() {
+        //         return this.templateFunction;
+        //       }
+        //     });
+
+        //     var CV = Chaplin.CollectionView.extend({itemView: ItemView});
+        //     var collection = new Chaplin.Collection();
+        //     var view = new CV({collection: collection});
+        //     collection.reset(models);
+        //   })
+        //   .on('complete', log)
+        //   .run({async: true});
+
+        var router = new Chaplin.Router;
+        router.match('index', 'null#1', {name: 'home'});
+        router.match('phone/:one', 'null#2', {name: 'phonebook'});
+        router.match('params/:two', 'null#3', {name: 'about'});
+        router.match('fake/:three', 'fake#2', {name: 'about'});
+        router.match('phone/:four', 'null#a');
+
+        bench({
+          object: function() {
+            Chaplin.helpers.reverse('null#a', {four: 1});
+          },
+          list: function() {
+            Chaplin.helpers.reverse('null#a', [1]);
+          }
         });
       });
     </script>
