Remove delayer and sync machine.

--- a/test/index.html
+++ b/test/index.html
@@ -65,10 +65,8 @@
           'collection',
           'controller',
           'view',
-          'delayer',
           'utils',
-          'helpers',
-          'sync_machine'
+          'helpers'
         ];
         var loaded = [];
         for (var i = 0, l = specs.length; i < l; i++) {
