--- a/test/index.html
+++ b/test/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Chaplin Test Runner</title>
-    <link rel="stylesheet" href="../bower_components/mocha/mocha.css">
-    <script src="../bower_components/mocha/mocha.js"></script>
-    <script src="../bower_components/expect/expect.js"></script>
-    <script src="../bower_components/sinon/index.js"></script>
+    <link rel="stylesheet" href="bower_components/mocha/mocha.css">
+    <script src="bower_components/mocha/mocha.js"></script>
+    <script src="bower_components/expect/expect.js"></script>
+    <script src="bower_components/sinon/index.js"></script>
     <script src="lib/sinon-expect-0.2.0.js"></script>
-    <script src="../bower_components/requirejs/require.js"></script>
+    <script src="bower_components/requirejs/require.js"></script>
     <script>
       // Fix timers stubbing in IE8-9.
       var oldTimers = {setInterval: setInterval, clearInterval: clearInterval};
