Finally fix tests.

--- a/test/index.html
+++ b/test/index.html
@@ -22,7 +22,7 @@
         baseUrl: 'temp/',
         paths: {
           jquery: '../bower_components/jquery/jquery',
-          underscore: '../bower_components/lodash/dist/lodash',
+          underscore: '../bower_components/lodash/lodash.compat',
           backbone: '../bower_components/backbone/backbone'
         },
         shim: {
