Nine failing tests.

--- a/test/index.html
+++ b/test/index.html
@@ -52,7 +52,7 @@
           'dispatcher',
           'composer',
           'composition',
-          // 'collection_view',
+          'collection_view',
           'model',
           'collection',
           'controller',
